--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: A-Vindication-of-the-Rights-of-Woman-With-Strictures-on-Political-and-Moral-Subjects_3420
+_version: 0.1.0
 creator:
   author:
     agent_name: Wollstonecraft, Mary
