--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-Vindication-of-the-Rights-of-Woman-With-Strictures-on-Political-and-Moral-Subjects_3420
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wollstonecraft, Mary
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/84
     wikipedia: http://en.wikipedia.org/wiki/Mary_Wollstonecraft
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3420#A-Vindication-of-the-Rights-of-Woman-With-Strictures-on-Political-and-Moral-Subjects
 gutenberg_bookshelf: Best Books Ever Listings
 gutenberg_issued: '2002-09-01'
 gutenberg_type: Text
